--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Test driven React tutorial.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register --require ./test/test-helper.js --recursive",
-    "test:watch": "npm test -- --watch",
+    "test": "node_modules/.bin/karma start karma.config.js",
+    "old-test": "mocha --compilers js:babel-register --require ./test/test-helper.js --recursive",
+    "test:dev": "npm run test -- --watch",
+    "old_test:watch": "npm test -- --watch",
     "build": "webpack",
     "dev": "webpack-dev-server --port 3000 --devtool eval --progress --colors --hot --content-base dist"
   },
@@ -23,12 +25,22 @@
   "devDependencies": {
     "babel-core": "^6.6.4",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.6.0",
     "chai": "^3.5.0",
     "enzyme": "^1.2.0",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.24",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
+    "phantomjs": "^2.1.3",
+    "phantomjs-polyfill": "0.0.2",
     "react-addons-test-utils": "^0.14.7",
     "sinon": "^1.17.3",
     "webpack": "^1.12.14",
@@ -36,6 +48,7 @@
   },
   "dependencies": {
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "yargs": "^4.2.0"
   }
 }
